# Trading

./: preqin-private-markets-ds-projects
asset-allocation-optimizer/: README.md  asset-allocation-optimizer.py
derivatives_pricer/: README.md  derivatives_pricer.cpp  market_data.csv
dynamic-macro-hedge/: README.md  dynamic-macro-hedge.py
interest-rate-swap-pricer/: README.md  swap_pricer.py
interest-rate-swap-pricer/macro_yield_curve_analysis/: README.md
java_signal_filter/: README.md  csvReader.java  csvWriter.java  main.java  signal.java  signalFilter.java
macro_yield_curve_analysis/: README.md  rolling_ols_yield_curve.py
risk_engine_cpp/: CMakeLists.txt  README.md
risk_engine_cpp/include/: Bond.hpp  Curve.hpp  Instrument.hpp  RiskEngine.hpp  Scenario.hpp
risk_engine_cpp/src/: Bond.cpp  Curve.cpp  RiskEngine.cpp  main.cpp
risk_engine_cpp/tests/: test_simple.cpp
signal-generator-lasso-xgb/: README.md  backtester.py  evaluate_trades.py  feauture_engineering.py  fetch_data.py  generate_signals.py  sync_dfs.py  validate_sync.py  volatility_filters.py  xgboost_signal_generator.py
yield-curve-model/: README.md  requirements.txt  yield_curve.py
