cmake_minimum_required(VERSION 3.15)
project(risk_engine LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
add_library(risk_engine_lib src/Curve.cpp src/Bond.cpp src/RiskEngine.cpp)
 target_include_directories(risk_engine_lib PUBLIC include)
add_executable(risk_engine src/main.cpp)
target_link_libraries(risk_engine PRIVATE risk_engine_lib)
include(FetchContent)
FetchContent_Declare(catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git GIT_TAG v3.5.2)
FetchContent_MakeAvailable(catch2)
add_executable(tests tests/test_simple.cpp)
 target_link_libraries(tests PRIVATE risk_engine_lib Catch2::Catch2WithMain)
 enable_testing()
 add_test(NAME all COMMAND tests)
